* fixed filter string normalization * changed data-grid button spacing/size

--- a/merlek-app/src/app/data-grid/data-grid.component.scss
+++ b/merlek-app/src/app/data-grid/data-grid.component.scss
@@ -37,4 +37,5 @@
 .table-responsive-lg {
   height: 100%;
   overflow-y: scroll;
+  border: 1px solid #dee2e6;
 }
